# ChangeLog for dev-db/mysql-cluster
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-cluster/ChangeLog,v 1.2 2014/08/13 20:53:43 grknight Exp $

  13 Aug 2014;  <grknight@gentoo.org> mysql-cluster-7.2.17.ebuild,
  mysql-cluster-7.3.6.ebuild:
  Remove live patches and set to none as no patches were being applied at this
  time

*mysql-cluster-7.2.17 (03 Aug 2014)
*mysql-cluster-7.3.6 (03 Aug 2014)

  03 Aug 2014; Robin H. Johnson <robbat2@gentoo.org> +files/my.cnf-5.5,
  +metadata.xml, +mysql-cluster-7.2.17.ebuild, +mysql-cluster-7.3.6.ebuild:
  Bring MySQL-Cluster from the overlay into the tree. Thanks to the great work
  of Brian Evans <grknight@gentoo.org>. Keywords not ported from other builds,
  as this contains other code not previously tested on other arches.