@@ -4,18 +4,20 @@ Hash: SHA256
 AUX my.cnf-5.5 4909 SHA256 56f5b341a0780a51d90bd51c72a917277606a6379e39a7f20c840447d2b65b68 SHA512 29c4052196af5f193e9fda10f40c696df3de80033c2b63013e40e8186180dbe6f7d3e0737a41c98bb506565ca265900ac640cb44f8bd5d5f42f8a0d3e72b8359 WHIRLPOOL 560881b8db2076199a9fa2fb81abb08373463e56ee9698d583e17f1e4b9a609b135a0854a15aa2ac587e87c83f16a1e7da88682d2e6f86761896a3332d0509c7
 DIST mysql-cluster-gpl-7.2.17.tar.gz 25882680 SHA256 d5bbf0fa7eda8056d01f564a9f50cba65794eefb07cb3c7b6b8819a86a66927b SHA512 ade82886867d897b23a6487c4efbbecef6842129a2b96df2a6097da73f4715e4e5ec4858f357d1e3f7eab5e1b4dc86bb89cd1ffe560ce17388ce26b06c5abd96 WHIRLPOOL cdf34ba72f971328a5ef10650df4a4ef482bfe6800543835fe5ea818f0fc8e8b57fda9c0608486fcada3590d84413c8e6c68db892ce1b36777c5bdce902e466b
 DIST mysql-cluster-gpl-7.3.6.tar.gz 42119293 SHA256 7f5405485ce05c88bd907269a75f161826ec92d763b46717a24880c378fd6dd4 SHA512 044a8854f61c7e4cb23343f84bf5c734244bbba8adc12a8a2c72d9febab4c1dbb404a7680aa0315de0df5459433eb578bc04f9ec169f0c2492e13e28aec6729d WHIRLPOOL 49b3eb455bad577d2a2d9d67c2fe78fef15ef184e7b56080d54f0a683f9a6596836108b727ed892a43dc0dc135ee65ab9293ddf0ad5f1587e41d31609090c8b6
+DIST mysql-extras-20140801-1950Z.tar.bz2 1494288 SHA256 a656486a7383d656ed33e279f41bb4384feba082cad3af48376ce9e1f395fe0b SHA512 b2c29c3d7c1ddacfa170125c9df0aaf65eac9f6112244b1deea97a46a3a2f2bd3eb069808e7b2ee3261d609b32046363830ba4ebcc7e74f449189a91145a6f9c WHIRLPOOL 41befc03a7382516849ecaecc1d02be7d00c47be489b97ce68c320c3aa8979c8f941525efe230d97ad2d1a85936a1e4d6c93d96a3f45930991a938e5f0fdab87
 EBUILD mysql-cluster-7.2.17.ebuild 4295 SHA256 5a9dc0767b4031afa2091b8352a702e18d8496b4d566e557cdde43461f3f53f8 SHA512 5eecfa20ff9c6d38d82d5274b42cd396074c2f73d6adb9f09b5642e8ec1b10154285901f35edb19be0a3bed0f748e874bd84cb55b9bc376669a122b5fe797e75 WHIRLPOOL 2e0200876d1f6071000165255b953d720cb69fbfa6b39d316472a06c7bd2cfd45f85b508d5cbf04e2db33c3ea5aeba0ba8e2a043db76af876d132c556992a219
+EBUILD mysql-cluster-7.3.6-r1.ebuild 4651 SHA256 a0703d2066791ddc378e3ae0310058ac5bcfb59395edde4f7b4e1ecf26f0ccd3 SHA512 0e93d18ef1e6a3230989c194e8ffd2b5598e2e4cf9a68e6c7d18206bf554fab062f2c31d294e89f2c2a924d9e014a87522f830b0b2deaf55956325690fb805f1 WHIRLPOOL 3f1ee45632a6fb8d67d82dfab7f3c9b8ddfb8d77831f420709728ecb34f963665c9d62c2be6f6bb7df546052d97a3ff99f55cfc6ee70189cf78a75241882e0b2
 EBUILD mysql-cluster-7.3.6.ebuild 4577 SHA256 6e7ca6bc6a6ee900a748a0f07b82efbb41b87684a288aea40b356650d7fe810f SHA512 11fc047e48dc4f9817115196576844c07c3dc626bf84c17f3c0a0d96c701d06d0101a0007cb4a5049f3321d908519516762839deab6885117d8df5b14dad4758 WHIRLPOOL d23b426cb59ebcaae7e1ce2877d9b129873aaf94658e5197bb278e0cfc8beaa1e5eea84e9afaf4471cf88b314d1d52af12b2101874bfbe4caf0e4338bf4369ca
-MISC ChangeLog 846 SHA256 2792a05f8b9360c63192f81de476ec03d12316fda49ac4149c77280b01290f84 SHA512 6aec342d022f016c2075e4805527348febfe813a7fc527e2d751b71646eab026dac837e6110527a3aaa7670d2a04e443cab5b24d8700dac0dcf0afd4738a8f36 WHIRLPOOL 78666225af2f28537c03eb47fd5b9b21a77490c11a34f5a133f7af08748abe057e5d7aacf7557d39420e1c74afda15a8384541a774ee9bdb89e1835a55678aac
+MISC ChangeLog 1003 SHA256 189fdf1830e4e2fb086c46883efd4a695666458f0238ad15408e0210686d7269 SHA512 d2e46e9c8cb62a8a20658c2e40eb981183e1e5d5e8e748bb2555a1adb0ee0bad537b4095a16459a584e3d430ce7dcc706782bfd8b544bb4723c296355ef99d0a WHIRLPOOL 4b2fb63043a7f2c6ab14f381a27b423b10134bd93ee8fd90feb0e3164603bbc5f06a8c83823d85133d6caba53c341b51c6873829a3a8833eeeb37667e0adb7f1
 MISC metadata.xml 1075 SHA256 2e8f6b7bd966203f74776b642bd7d8007b89b3b1903d259a749088f9be6f333e SHA512 f5b5463c19d04ec24e6bb09decbfca589a0f26fb33a47f85854d54621d544963c662282980961fa58094d6078a8c0e387eb35066cb433a26cb3e8ea4365a2700 WHIRLPOOL 135e213130ff15bd48b97494afc14cbce3ce65b0da540be5d29e5260cbfdb8bab8cbb30dfa7749d244115588a2f1c3956ad5bbc818082926e34551a0922cd5f1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT69BeAAoJEE4V4vFnx44den8H/0lY8XsWxH1j43V/vvnzYa/1
-cXlyRPybsFcWq1pVbsmj6jx4qfDatC0pKmkgcH9snkYhPNiaSiEx1otsFIKMUSN8
-vwPW5A2sVYaCTczclNb5K9+RkY+ptDk1inNLMlBsutCJMdQgTMXM0LyKTP1UJpQN
-RUT6x3oEFpGca3FglIA2lKwhX+Ep/eE5pETMzhiV1HZ8HvScMWGUP5+YEVuHGpOH
-D5CFCPHt0NaclER1Ajcx2GMI+ZJ9E3HWgkPqbpPYB8g7srhPQiXD18LeQlwtsI8x
-Z+54vbxaiRA+KfhVwojl3vdLjka0fllPc8nwJrPv0Lb9r+H6I+foRWpBD9/h82w=
-=9Gqi
+iQEcBAEBCAAGBQJUA4zNAAoJEE4V4vFnx44drhwH/37doVr3nkb3VmOLiTNY+3Aq
+mtlJ7GUjtMEl5GdlMHdlpDGN7zanS+5VntmAX9/zfVAHkxrqc5p/PiRMBx19D+BU
+o1xr3mCxwlrtQSF3/5F+S+ptTNh6i9RtNRR4flOpR2q0zL0Cd9YchPwOut3Dsr/+
+fPNdsfJVKyvsUpNWZPZYcORRrC2PVISUq+GOf4fgQ+hWyIjLzcwm0oauQyHKxjB1
+YJkE+008M0binjZ1IN+TJjSdNSWdmKU4CD4KDaz4HlRpTq8hTe0fBbT3ImXPZlN+
+KBWEYJKvf9vc5ihFSLZqH2Nz0+tNU4QItTYwUD1Dp/RBe8DezwY0dGqlZISKwhk=
+=GDSO
 -----END PGP SIGNATURE-----
