@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST python-social-auth-0.1.26.tar.gz 247579 SHA256 9f0a9e8526850e9d0bdd4e5df4d2a6129c4da5a747887ccbfebafc0d2868120c SHA512 c3637f9a269f2c8465b1896840a5ca0f70bb6c45c93f7d9c08c54434037984538ba95442a164841c069cb5b1fd251d0f3f62baa1dc2754a542baceb2f325bd8b WHIRLPOOL e9d17f1c7b094cf0c20d7cee6ba06e0557b322d24aa6bf53743e49eaa08bf8935e71b7d1793227d53d6ff9cacebae975768feab5f6d37d683df8f16caf19a9ed
-EBUILD python-social-auth-0.1.26.ebuild 1607 SHA256 cd1ef985e7df0baa5413a1e863649a7e4fa9dab613c1301ec8d7a13d5042755b SHA512 929d0c921a14e575704f5fe3d1ccdd0a3082d8582cfad9482be50026cd13cf28f41eb426f008fd542e18019edcddb6a1531887df7277ed2c60fb74d69d438228 WHIRLPOOL 00a853f0e42186a2734e6cdc5093c540640ed185c5187ddf45a96551c5e53502d92dc866f4c25a5bd7d6b8502399538ee6c750fe2135e0574ab0f2b8812d3bd0
-MISC ChangeLog 416 SHA256 d62c86c4b66073c8682dcd9ebfb20f31ffaa7929e1500393771b29d78d744470 SHA512 453f7dd3bcf7c59845904f859adae7f6d74924aa74a29ea4f41fb74ba93c181daa7b05975bd0d4150bdb1538136d50da8b006f0696345bbedfeccf4d8f90e8e2 WHIRLPOOL d26cf576ec0a5af0b09be758a222dabe4419382d98a1f731d05c8b56f26bdebcecf06294fb009cb3c6f565d0f668026c5469d05ec70cbc1191bc1488559117a8
+EBUILD python-social-auth-0.1.26.ebuild 1616 SHA256 8357dc2bcb2eb21534c9addd5e20173d2b1e2aa3c2049fdda3b04ced29f726ea SHA512 8632147afd1589af01492a683a10e200704bb30906a8906738ba85e825f11768de1f3b7eca917ff78432cd8a4ef9dc544248201eacca85cbe8e4bb89fd7153d3 WHIRLPOOL f2153097763885e913d7c15a2eb34d7a2d35a6cb6075f407fdd955b52d42aa7b2629f96a5a19931810ef0352ab7abba5cd8e03854e104405f7b0939297000169
+MISC ChangeLog 528 SHA256 9357bf2642f08475097824783b24794fbe881b8fc4bdd5681de2e095f26eded1 SHA512 4f69116191f89a48ff30b6ddc4f22fb3a766f512884d33d5b4a498644a019ee6ec7f0528a67b4ea6285e6cb612e35d1650d7ece5e9527d686100691ee80c891e WHIRLPOOL 9478a7f19a2006b1860e243758db4bed604f70b02c9a27e765eb6216b789662572f484b54a64a2ab5ca665f2f9a7a6a2d4b8f8d2feb21a164a1036602e7e0bb5
 MISC metadata.xml 159 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4 SHA512 d5a29b9f6ecddfc368dc0f1f8919cd3c3d6ecf2c7a82bc8d4c0dd51b7aa15561ed0462acb8ae39bc84f97e706e82d9b4b06357494f164f1648219f604b473fbe WHIRLPOOL 36e19b63a1b307cc200e1d73499b7477f73799db3909e71b5a0916084728351c76d400f65e2c8b3f8fffb2c9ba54c0bd235f785b47414178d98f11d64a9420d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUAd2VAAoJEAmJmMX429reZzQIAJIxQekSyFuxLkskaQWEq6DH
-i6kiOCZCm2sE6qmBIWb3elHMt92T6gaSvpkfm+UaRgT+K6WDQ7/YJR9aOvcCdBOB
-R4hbmL++VD3ay8dxC3Nz7J4eGsm4ZObqWgjC4OkoaRhgBX1dXNzWAeykTbApE5M8
-Ao2vIrz6OQMLn77fFasqVjJ23sAenKB0Ywk4mMfTN43KT+Ox/axxESbwTcqh+pSd
-7h7HJQgdniu6S+Pd9cEfXW6HDtFo9zyR30Kur04/2TH1XmQKOAhvn1zuqKRJd6WZ
-WV4VIURhZHIZwhGm2FaK+BrW0Eo2lkBiI7kdCeNuQWqLyuaZ7L6sGa31wDG2yM0=
-=u3M1
+iQEcBAEBCAAGBQJUA4abAAoJEAmJmMX429reON4H/11bHoWi0WL2nDPGS7DVQWV8
+l25h87pFwg1VOONLj4bOnFhkTTAxPUAliq5NQDpc5NIqfv67TEeFJGd/fSkEv7r3
+vfbNCfLfQgkb2chHksshj2pXP3abNt7sQ/233ccfH/GVeQIAAKmoLdSnVhue5nli
+IcQCLWkDogC6ojvPTQoKuVl1eDTJm0D6TApk04r2I0arwXMG3qu54q1ZS0RQOqAP
+30OQP3ZEZ6GNqYw1tTmhzCtOP1ilkf5xCcSueSG3hE5ALTA0/9ldbpxn6LCptDOU
+eVHdn33Ayn32BaUw2X7qVBLtSz9WnZ70wVmlh2jTf7KQtrn9+v5S5W4q9rJuat8=
+=fAv4
 -----END PGP SIGNATURE-----
