@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-social-auth/python-social-auth-0.1.26.ebuild,v 1.1 2014/08/30 14:20:15 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-social-auth/python-social-auth-0.1.26.ebuild,v 1.2 2014/08/31 20:33:44 maksbotan Exp $
 
 EAPI=5
 
@@ -15,7 +15,7 @@ SRC_URI="https://github.com/omab/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="doc test"
+IUSE="doc examples test"
 
 RDEPEND="
 	$(python_gen_cond_dep \
