@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile config configure install postinst preinst prepare setup test unpack
+DEPEND=|| ( >=sys-devel/gcc-3.4.6 >=sys-devel/gcc-apple-4.0 ) java? ( >=dev-java/java-config-2.1.9-r1 ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) ssl? ( >=dev-libs/openssl-1.0.0:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?,static-libs?] ) kernel_linux? ( sys-process/procps:0= dev-libs/libaio:0= ) >=sys-apps/sed-4 >=sys-apps/texinfo-4.7-r1 >=sys-libs/zlib-1.2.3:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?,static-libs?] !dev-db/mariadb-native-client[mysqlcompat] jemalloc? ( dev-libs/jemalloc:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?] ) tcmalloc? ( dev-util/google-perftools:0= ) systemtap? ( >=dev-util/systemtap-1.3:0= ) dev-libs/libedit !dev-db/mysql !dev-db/mariadb !dev-db/mariadb-galera !dev-db/percona-server dev-libs/libevent:0= java? ( >=virtual/jdk-1.6 ) virtual/yacc static? ( sys-libs/ncurses[static-libs] ) >=dev-util/cmake-2.8.9
+DESCRIPTION=A fast, multi-threaded, multi-user SQL database server
+EAPI=5
+HOMEPAGE=http://www.mysql.com/
+IUSE=elibc_FreeBSD java abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64 +community cluster debug embedded extraengine jemalloc latin1 max-idx-128 minimal +perl profiling selinux ssl systemtap static static-libs tcmalloc test
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+PDEPEND=perl? ( >=dev-perl/DBD-mysql-2.9004 ) ~virtual/mysql-5.5
+RDEPEND=!media-sound/amarok[embedded] java? ( >=dev-java/java-config-2.1.9-r1 ) ssl? ( >=dev-libs/openssl-1.0.0:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?,static-libs?] ) kernel_linux? ( sys-process/procps:0= dev-libs/libaio:0= ) >=sys-apps/sed-4 >=sys-apps/texinfo-4.7-r1 >=sys-libs/zlib-1.2.3:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?,static-libs?] !dev-db/mariadb-native-client[mysqlcompat] jemalloc? ( dev-libs/jemalloc:0=[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?,abi_ppc_32(-)?,abi_ppc_64(-)?,abi_s390_32(-)?,abi_s390_64(-)?] ) tcmalloc? ( dev-util/google-perftools:0= ) systemtap? ( >=dev-util/systemtap-1.3:0= ) dev-libs/libedit !dev-db/mysql !dev-db/mariadb !dev-db/mariadb-galera !dev-db/percona-server dev-libs/libevent:0= !minimal? ( !prefix? ( dev-db/mysql-init-scripts ) ) selinux? ( sec-policy/selinux-mysql ) abi_x86_32? ( !app-emulation/emul-linux-x86-db[-abi_x86_32(-)] ) java? ( >=virtual/jre-1.6 )
+REQUIRED_USE=tcmalloc? ( !jemalloc ) jemalloc? ( !tcmalloc ) minimal? ( !cluster !extraengine !embedded ) static? ( !ssl )
+SLOT=0
+SRC_URI=http://downloads.mysql.com/archives/mysql-cluster-gpl-7.3/mysql-cluster-gpl-7.3.6.tar.gz mirror://mysql/Downloads/MySQL-Cluster-7.3/mysql-cluster-gpl-7.3.6.tar.gz mirror://gentoo/mysql-extras-20140801-1950Z.tar.bz2 http://dev.gentoo.org/~robbat2/distfiles/mysql-extras-20140801-1950Z.tar.bz2 http://dev.gentoo.org/~jmbsvicetto/distfiles/mysql-extras-20140801-1950Z.tar.bz2 http://dev.gentoo.org/~grknight/distfiles/mysql-extras-20140801-1950Z.tar.bz2
+_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	9eb4b5fb858228316d8bb32ada51f6a5	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	d7f2985a2c76c365ee20269db5261414	mysql-cmake	64177afd83677e2e1de9667e120bc34c	mysql-multilib	83961d65d66463e8b44ac7e73fb05fa1	mysql_fx	ab94d85c3c822792c72f7eeff96f2365	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=aa155f891338586a0b2499a51fcfa6d9
