@@ -3,7 +3,7 @@ DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,python_targets_python3
 DESCRIPTION=Easy to setup social auth mechanism with support for several frameworks and auth providers
 EAPI=5
 HOMEPAGE=http://psa.matiasaguirre.net/
-IUSE=doc test python_targets_python2_7 python_targets_python3_3
+IUSE=doc examples test python_targets_python2_7 python_targets_python3_3
 KEYWORDS=~amd64
 LICENSE=BSD
 RDEPEND=python_targets_python2_7? ( dev-python/python-openid[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python3_3? ( dev-python/python3-openid[python_targets_python3_3(-)?,-python_single_target_python3_3(-)] ) >=dev-python/oauthlib-0.3.8[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] dev-python/requests[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] dev-python/requests-oauthlib[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] >=dev-python/six-1.2.0[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)]
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_3 )
 SLOT=0
 SRC_URI=https://github.com/omab/python-social-auth/archive/v0.1.26.tar.gz -> python-social-auth-0.1.26.tar.gz
 _eclasses_=distutils-r1	90e7008a7d21e3b1597bea444bb85827	eutils	06133990e861be0fe60c2b428fd025d9	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	75e5c82b55dcb208a0a8f4ab8847e731	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=118caabb76235d0d5dcba5375fe85e2c
+_md5_=c3098b77c4d0200c864714fb1927c898
