@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/mysql-cluster
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-cluster/ChangeLog,v 1.2 2014/08/13 20:53:43 grknight Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql-cluster/ChangeLog,v 1.3 2014/08/31 20:59:52 grknight Exp $
+
+*mysql-cluster-7.3.6-r1 (31 Aug 2014)
+
+  31 Aug 2014; Brian Evans <grknight@gentoo.org> +mysql-cluster-7.3.6-r1.ebuild:
+  Revision bump for multilib ebuild
 
   13 Aug 2014;  <grknight@gentoo.org> mysql-cluster-7.2.17.ebuild,
   mysql-cluster-7.3.6.ebuild:
